# github-daily

./: .gitignore  CLAUDE.md  README.md  cleanup.py  config.py  config.yaml  fetch.py  pyproject.toml  run.py
analysts/: __init__.py  editor.py  narrator.py  repo_wiki.py  trending_reviewer.py
assets/themes/: apple.css  chart-tooltip.js  mobile.css  shell.html
collectors/: repos.py  trending.py
data/publications/: 2026-04-19.md  2026-04-20.md
data/renders/2026-04-19/: publication.html
data/renders/2026-04-20/: publication.html
data/repo_wikis/: openai-codex.md
data/trending/: 2026-04-19.json  2026-04-20.json
data/trending_reviews/: EvoMap-evolver.json  Fincept-Corporation-FinceptTerminal.json  Lordog-dive-into-llms.json  NousResearch-hermes-agent.json  OpenBMB-VoxCPM.json  forrestchang-andrej-karpathy-skills.json  lsdefine-GenericAgent.json  microsoft-markitdown.json  multica-ai-andrej-karpathy-skills.json  multica-ai-multica.json  shiyu-coder-Kronos.json  thedotmack-claude-mem.json  thunderbird-thunderbolt.json  virattt-ai-hedge-fund.json
db/: models.py
docs/: 项目定位.CN.md
prompts/: SOUL.md  editor.md  narrator.md  repo_wiki.md  trending_reviewer.md
renderers/: charts.py  publication.py  trending.py
schedules/: install.py
web/: __main__.py  app.py
