[project]
name = "github-daily"
version = "0.1.0"
description = "GitHub Daily — 辛哥的开源风向"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "playwright>=1.49",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*", "renderers*", "publishers*", "schedules*", "analysts*", "db*", "web*"]
